Introducing Java 21 improvements.